--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,8 @@ ul.subPhotos ol img
   margin-bottom: 100px;
 }
 .menu .album{
-  margin-bottom: 20px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .menu .menuName
